# s4

./: .gitignore  .gitmodules  LICENSE  README.md
cplane/: go.mod
dplane/: Cargo.toml  debug.sh  test.sh
dplane/src/: cache.rs  config.rs  controller.rs  core.rs  deparser.rs  main.rs  parser.rs  pipeline.rs  worker.rs
dplane/src/cache/: cache.rs  hash.rs  tss.rs
dplane/src/controller/: cache_controller.rs  cmd.rs  cp_stream.rs  table_controller.rs
dplane/src/core/: helper.rs  logger.rs  thread.rs
dplane/src/core/helper/: dpdk.rs  linux.rs
dplane/src/core/logger/: lib.rs  log.rs
dplane/src/core/memory/: dpdk.rs  linux.rs
dplane/src/core/network/: dpdk.rs
dplane/src/core/runtime/: wasm.rs
dplane/src/deparser/: deparser.rs  runtime_native_api.rs
dplane/src/parser/: header.rs  parse_result.rs  parser.rs  runtime_native_api.rs
dplane/src/pipeline/: binary_tree.rs  output.rs  pipeline.rs  radix_tree.rs  runtime_native_api.rs  table.rs  tree.rs  tx_conf.rs
dplane/src/pipeline/tree/: avl_tree.rs  binary_tree.rs  radix_tree.rs
dplane/src/worker/: cache.rs  cache_creater.rs  fib.rs  pipeline.rs  rx.rs  single_core.rs  tx.rs
dplane/testdata/: dataplane.json  switch_config.yaml
e_pktgen/: Cargo.toml  README.md
e_pktgen/src/: main.rs  method.rs  run.rs
e_pktgen/src/header/: ethernet.rs  ipv4.rs  tcp.rs  udp.rs
e_pktgen/src/method/: tcp.rs
s4dp/: Cargo.toml  debug.sh
s4dp/src/: cache.rs  config.rs  controller.rs  core.rs  fib.rs  main.rs  parser.rs  worker.rs
s4dp/src/cache/: cache.rs  tuple.rs
s4dp/src/core/: runtime.rs
s4dp/src/core/helper/: dpdk.rs
s4dp/src/core/memory/: dpdk.rs
s4dp/src/core/network/: dpdk.rs
s4dp/src/dpdk/: dpdk_memory.rs
s4dp/src/fib/: header.rs  table.rs
s4dp/src/parser/: header.rs  parse_result.rs  parser.rs
s4dp/src/pipeline/: binary_tree.rs  radix_tree.rs
s4dp/src/worker/: cache.rs  rx.rs
s4dp/testdata/: dataplane.json
test/e_pktgen/: Cargo.toml  test.yml
test/e_pktgen/src/: cmd.rs  device.rs  dpdk.rs  gen.rs  header.rs  main.rs  mode.rs  rx.rs  tx.rs
test/e_pktgen/src/cmd/: count.rs
test/e_pktgen/src/dpdk/: common.rs  interface.rs  memory.rs  pktbuf.rs  thread.rs
(+91 files in other folders)
