[package]
name = "switch_dp"
version = "0.1.0"
edition = "2021"

[features]
default = ["prod"]
# default = ["debug"]
prod = ["dpdk", "runtime_wasm", "wasm_wasmer"]
debug = ["linux", "runtime_wasm", "wasm_wasmer"]

dpdk = []
linux = []
runtime_wasm = []
wasm_wasmer = []

[dependencies]
# dpdk feature only
rust-dpdk-sys = { git = "https://github.com/x8xx/rust-dpdk.git", rev = "3c72af1a8c1549105c1112285ebba4feaca0a4b5" }
# linux feature only
libc = "0.2.137"
pnet = "0.30.0"

getopts = "0.2.19"
# murmurhash3 = "0.0.5"
wasmer = "2.3.0"
wasmer-compiler-llvm = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust = "0.4.5"
