[package]
name = "e_pktgen"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.30.0"
argh = "0.1.8"
# modular-bitfield = "0.11.2"
modular-bitfield-msb = { git = "https://github.com/CirrusNeptune/modular-bitfield-msb.git", rev = "37d054dcd9b5653fa8aa3148d9cc23f082b1a8cc" }
yaml-rust = "0.4.5"
rand = "0.8.5"
